# oberon0

./: .gitignore  CMakeLists.txt  LICENSE  README.md  global.h  main.cpp
codegen/: Generator.cpp  Generator.h  GeneratorTwo.cpp  GeneratorTwo.h  LLVMMachine.cpp  LLVMMachine.h
parser/: Parser.cpp  Parser.h  grammar2
parser/ast/: LiteralNode.h  Node.cpp  Node.h  NodeVisitor.cpp  NodeVisitor.h
parser/ast/nodes/: IdentNode.cpp  IdentNode.h  LiteralNode.cpp  LiteralNode.h  Node.cpp  Node.h  OperatorNode.cpp  OperatorNode.h
parser/ast/visitor/: NodeVisitor.cpp  NodeVisitor.h
scanner/: IdentToken.cpp  IdentToken.h  LiteralToken.cpp  LiteralToken.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  UndefinedToken.cpp  UndefinedToken.h
scoper/: Scope.cpp  Scope.h  Scoper.cpp  Scoper.h
scoper/symbols/: Constant.cpp  Constant.h  Module.cpp  Module.h  PassedParam.cpp  PassedParam.h  Procedure.cpp  Procedure.h  Symbol.cpp  Symbol.h  Variable.cpp  Variable.h
scoper/symbols/types/: BaseTypes.cpp  BaseTypes.h  ConstructedTypes.cpp  ConstructedTypes.h  Type.cpp  Type.h  typerules
symbol_table/: Scope.cpp  SymbolTable.cpp  SymbolTable.h
symbol_table/symbols/: Constant.cpp  Constant.h  Module.cpp  Module.h  Procedure.cpp  Procedure.h  Reference.cpp  Reference.h  Symbol.cpp  Symbol.h  Variable.cpp  Variable.h
symbol_table/symbols/types/: BaseTypes.cpp  BaseTypes.h  ConstructedTypes.cpp  ConstructedTypes.h  Type.cpp  Type.h
test/: BubbleSort.Mod  HelloWorld.Mod  Putchar.Mod  Sort0.Mod
typechecker/: TypeChecker.cpp  TypeChecker.h
util/: Logger.h
